fix: remove dark mode in `color-scheme`

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
+  color-scheme: light;
   color: #213547;
   background-color: #ffffff;
 
